...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/back_btn"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/back_btn_background">

...
